document editmode image bug fix: height overflow hidden
git-svn-id: http://www.pimcore.org/svn/pimcore/private/core/trunk@5310 1f8fe7d8-47f0-464c-8d0a-336f4953ab05

--- a/pimcore/static/css/editmode.css
+++ b/pimcore/static/css/editmode.css
@@ -50,6 +50,10 @@
 
 /* pimcore editables */
 
+.pimcore_tag_image .x-panel-body {
+    overflow: hidden;
+}
+
 .pimcore_tag_image_alt {
 	position: absolute;
 	bottom: 0;
